# VOSSE-mhw

./: LICENSE  Makefile  README.md  pixi.toml  pyproject.toml
vosse/: __init__.py  dataset.py  features.py  plots.py
vosse/modeling/: predict.py  train.py
