[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vosse"
version = "0.0.1"
description = "Evaluating new observations system designs (OSSEs) for marine heatwaves, using VirtualShip to authentically simulate real-life observations."
authors = [
  { name = "Jamie R. C. Atkins" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["vosse"]
include = ["pyproject.toml", "vosse/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["vosse"]
force-sort-within-sections = true

